vlib/v/checker/tests/mul_op_wrong_left_type_err_d.vv
import math
import math.complex as cmplx

fn main() {
	c1 := cmplx.complex(1,-2)
	c2 := c1 * 2.0
	println(c2)
}
